* Don't reset date/datetime/time to None when it is invalid

Version 6.8.3 - 2023-09-06
--------------------------
* Bug fixes (see mercurial logs for details)


Version 6.8.2 - 2023-08-01
--------------------------
* Bug fixes (see mercurial logs for details)


Version 6.8.1 - 2023-05-17
--------------------------
* Bug fixes (see mercurial logs for details)


Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Include events to logs
* Add option to disable thread
* Remove support for Python 3.7
* Add support for Python 3.11
* Save and Restore tree state on List Form
* Do record (pre)validation and saving on selection change for list-form views
* Eagerly read string value of selection fields
* Do not select first record by default
* Use ``&`` and ``|`` as boolean operator in search widget
* Use toggle button and label on translate dialog
* Manage domain on id in single value list as unique
* Do not validate domain nor enforce uniqueness for empty fields unless they're required or invisible
* Display the number of selected records on xxx2Many

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Support authentication services

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Use unittest discover
* Support notification message
* Add option to define logging output location
* Remove TreeViewControl
* Manage optional column
* Default CSV encoding to UTF8 with BOM
* Display the number of selected records
* Humanize the count result
* Add limit to search_count
* Call view_get for board view
* Limit board action domain to active id and ids
* Add support for Python 3.10
* Remove support for Python 3.6
* Manage creatable attribute of view

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Support grouping attribute
* Support monetary and symbol field attributes