@@ -6,6 +6,7 @@ import datetime
 import gettext
 import logging
 import os
+import re
 import shutil
 import tempfile
 import threading
@@ -21,6 +22,7 @@ from tryton.config import CONFIG, PIXMAPS_DIR, TRYTON_ICON, get_config_dir
 
 _ = gettext.gettext
 logger = logging.getLogger(__name__)
+DEMO_HOSTNAME = re.compile(r"demo\d+\.\d+\.tryton\.org")
 
 
 class DBListEditor(object):
@@ -504,6 +506,8 @@ class DBLogin(object):
         config_dir = get_config_dir()
         self.profile_cfg = os.path.join(config_dir, 'profiles.cfg')
         self.profiles = configparser.ConfigParser()
+        series = '.'.join(__version__.split('.', 2)[:2])
+        current_demo = f"demo{series}.tryton.org"
         try:
             self.profiles.read(self.profile_cfg)
         except configparser.Error:
@@ -520,16 +524,27 @@ class DBLogin(object):
                 f"A backup can be found at {temp_name}",
                 exc_info=True)
         if not self.profiles.sections():
-            short_version = '.'.join(__version__.split('.', 2)[:2])
-            name = 'demo%s.tryton.org' % short_version
-            self.profiles.add_section(name)
-            self.profiles.set(name, 'host', name)
-            self.profiles.set(name, 'database', 'demo%s' % short_version)
-            self.profiles.set(name, 'username', 'demo')
+            self.profiles.add_section(current_demo)
+            self.profiles.set(current_demo, 'host', current_demo)
+            self.profiles.set(current_demo, 'database', f'demo{series}')
+            self.profiles.set(current_demo, 'username', 'demo')
+        to_remove = []
         for section in self.profiles.sections():
+            host = self.profiles.get(section, 'host', fallback='')
+            if host and DEMO_HOSTNAME.match(host) and host != current_demo:
+                to_remove.append(section)
+                continue
             active = all(self.profiles.has_option(section, option)
                 for option in ('host', 'database'))
             self.profile_store.append([section, active])
+        for section in to_remove:
+            self.profiles.remove_section(section)
+        if to_remove and not self.profiles.has_section(current_demo):
+            self.profiles.add_section(current_demo)
+            self.profiles.set(current_demo, 'host', current_demo)
+            self.profiles.set(current_demo, 'database', f'demo{series}')
+            self.profiles.set(current_demo, 'username', 'demo')
+            self.profile_store.append([current_demo, True])
 
         self.services = []
         self.service_base = ''
